# spyprof

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  spyprof.py
.github/: FUNDING.yml
